--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
 
     </Head>
     <body>
-        <h1>tiTULO</h1>
-        <h2>tiTULO</h2>
-        <h3>tiTULO</h3>
-        <h4>tiTULO</h4>
-        <h5>tiTULO</h5>
-        <h6>tiTULO</h6>
+        <h1>ShadowStacks</h1>
+        <h2>By Kywz._</h2>
+        <img src="d:\ChatGPT Image 7 de fev. de 2026, 14_26_30.png" alt="">
+        <h1 style="color: aqua;"></h1>
+        <h2 style="color: firebrick;"></h2>
+        <img sizes="2">
 
-        <p>Lore</p>
-        
     </body>
-</html>
+
+    <style>
+
+    </style>
