--- a/index.html
+++ b/index.html
@@ -1,21 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>basico html </title>
+<html>
+<head>
+    <title>My Web Page</title>
+</head>
 
-    </Head>
-    <body>
-        <h1>ShadowStacks</h1>
-        <h2>By Kywz._</h2>
-        <img src="d:\ChatGPT Image 7 de fev. de 2026, 14_26_30.png" alt="">
-        <h1 style="color: aqua;"></h1>
-        <h2 style="color: firebrick;"></h2>
-        <img sizes="2">
+<body>
+    <h1>Bem-Vindo ao ShadowStack</h1>
+    <p>Esse é o teste do meu site no html.</p>
+</html>
 
-    </body>
+<body style="background:black; color:red;">
+  <h1>Site Batendo certo</h1>
+</body>
 
-    <style>
+<style>
+  body {
+    margin: 0;
+  }
+  img {
+    width: 100vw;
+    height: 100vh;
+    object-fit: cover;
+  }
+</style>
 
-    </style>
+<img src="d:\ChatGPT Image 7 de fev. de 2026, 14_26_30.png" style="display:block; margin:auto; width:100vw; height:100vh; object-fit:cover;">
+
+<button onclick="alert('Eu disse pra não Clicar!')">Não Clique</button>
+
